--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.26.1",
     "ejs": "^3.1.6",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/fs-extra": "^9.0.13",
+    "@types/lodash": "^4.14.179",
     "@types/node": "^17.0.21",
     "@types/shelljs": "^0.8.11",
+    "dotenv": "^16.0.0",
     "fs-extra": "^10.0.1",
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
