--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.26.1",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
+    "express-tsx-views": "^1.4.6",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
@@ -28,6 +29,7 @@
     "@types/fs-extra": "^9.0.13",
     "@types/lodash": "^4.14.179",
     "@types/node": "^17.0.21",
+    "@types/react": "^17.0.40",
     "@types/shelljs": "^0.8.11",
     "dotenv": "^16.0.0",
     "fs-extra": "^10.0.1",
